objects/Payroll_System__c.object
<CustomObject><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Enabled_for_Time_Off_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled for Time-Off Manager</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Max_Days_in_a_Single_Request__c</fullName>
        <inlineHelpText>The maximum number of days off that can be requested in a single time-off request. If this is left blank, then a default of 50 will be used.</inlineHelpText>
        <label>Max Days in a Single Request</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Max_Negative_Floating_Holiday_Balance__c</fullName>
        <label>Max Negative Floating Holiday Balance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Max_Negative_PTO_Balance__c</fullName>
        <label>Max Negative PTO Balance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Record_Type_Prefix__c</fullName>
        <label>Record Type Prefix</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TEST</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><customHelp>TOM_Admin_Guide</customHelp><deploymentStatus>Deployed</deploymentStatus><description>TOM: Payroll system information for each unique payroll system that processes time-off requests</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Payroll System</label><nameField>
        <label>Payroll System ID Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Payroll Systems</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Enabled_for_Time_Off_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>